--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>WebGL Sites Project</title>
-    <meta charset="utf-8"/>
-  </head>
+<!doctype html>
+<html lang="fr">
+<head>
+	<meta charset="utf-8" />
+	<title>Demonixis.Net :: Babylon.js - Partie 1</title>
+    <style>
+		body, html {
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+			width: 100%;
+			height: 100%;
+		}
+		canvas {
+			width: 100%;
+			height: 100%;
+		}
+	</style>
+</head>
+<body>
 
-  <body>
-    <div class="content"></div>
-  </body>
+	<canvas id="renderCanvas"></canvas>
 
+<script src="scripts/babylon.1.6.js"></script>
+<script src="scripts/hand-1.1.3.js"></script>
+<script src="scripts/demo.js"></script>
+<script>
+	runDemo("renderCanvas");
+</script>
+</body>
 </html>
