--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<canvas id="renderCanvas"></canvas>
 
-<script src="scripts/babylon.1.6.js"></script>
+<script src="scripts/babylon.custom.js"></script>
 <script src="scripts/babylon_obj.js"></script>
 <script src="scripts/hand-1.1.3.js"></script>
 <script src="scripts/demo.js"></script>
